add prettier + add prettier to linter

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,9 @@ jobs:
 
       - name: Lint
         run: npm run lint
+      
+      - name: Format Check
+        run: npm run format:check
+
+
+      
