--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --max-warnings=0",
-    "format": "prettier . --write",
+    "format:fix": "prettier . --write",
     "format:check": "prettier . --check"
   },
   "dependencies": {
