move build to own workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Lint + Prettier
+name: Build
 
 on:
   pull_request:
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   lint:
-    name: Linting and Formatting Check
+    name: Build Check
     runs-on: ubuntu-latest
 
     steps:
@@ -30,8 +30,5 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Lint
-        run: npm run lint
-
-      - name: Format
-        run: npm run format:check
+      - name: Build
+        run: npm run build
